ajustes fonte/footer

--- a/contribuicao.html
+++ b/contribuicao.html
@@ -94,7 +94,7 @@
         </main>
     
     
-        <footer>
+        <footer class="rodape">
             <p>Nos acompanhe em nossas redes sociais:</p>
             <img src="imagens/logo-instagram.png" alt="">
             <img src="imagens/logo-facebook.png" alt="">
