--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 
 <body>
 
-    <!-- Cabeçalho principal
-    (ficará com largura total) -->
+
     <header>
-        <!-- Subcabeçalho (ficará limitado) -->
+        
         <div class="limitador">
             <a href="index.html"><img src="imagens/fundo_logo.png" alt=""></a>
             <nav>
-                <h2><a href=""> &equiv; </a></h2>
+                <h2><a href="" class="icone"> &equiv; </a></h2>
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="oq-fazemos.html">O que fazemos</a></li>
