Máscara formulário - contribuição

--- a/contribuicao.html
+++ b/contribuicao.html
@@ -191,6 +191,13 @@
         <p>2023</p>
     </footer>
 
+    <!-- Importando a Biblioteca jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+    <!-- Importando o plugin jQuery Mask -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+
+
     <script src="js/menu.js"></script>
 </body>
 
