Informações do fale conosco.

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -41,9 +41,20 @@
             <img src="imagens/ft-plinio.png" alt="Plínio">
             <img src="imagens/ft-salatiel.png" alt="Salatiel">
         </figure>
-        <a href="mailto:saalatiel@gmail.com">salatiel@gmail.com</a>
-        <a href="mailto:plinio.t.vasconcellos@gmail.com">plinio.t.vasconcellos@gmail.com</a>
-        <a href="mailto:liliancarvalho@gmail.com">liliancarvalho@gmail.com</a>
+        <div class="nome">
+            <p><strong>Lilian</strong></p>
+            <p><strong>Plínio</strong></p>
+            <p><strong>Vinícius</strong></p>
+        </div>
+
+
+
+            <div class="email">
+                <a href="mailto:liliancarvalho@gmail.com">liliancarvalho@gmail.com</a>
+                <a href="mailto:plinio.t.vasconcellos@gmail.com">plinio.vasconcellos@gmail.com</a>
+                <a href="mailto:viniciusdemirandabarbosa@gmail.com">viniciusmiranda@gmail.com</a>
+            </div>
+        
 
         <h2>Qual é a sua dúvida?</h2>
         <div>
