Alterações em grupo

--- a/contribuicao.html
+++ b/contribuicao.html
@@ -87,7 +87,7 @@
                 empresas também podem organizar eventos de arrecadação de fundos para apoiar a cozinha solidária e
                 incentivar seus funcionários a fazerem doações individuais.</p>
         </section>
-
+        <!-- Atenção -->
         <figure><img src="imagens/img-contribuicao.png" alt="Marmitas com comida"></figure>
 
         <section id="contribuicao">
