--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -32,7 +32,7 @@
     <main>
         <h2 class="duvida">Fale conosco</h2>
 
-
+        <div class="container-contato">
         <figure>
             <img src="imagens/ft-lilian.png" alt="Lilian">
             <img src="imagens/ft-plinio.png" alt="Plínio">
@@ -51,7 +51,7 @@
                 <a href="mailto:plinio.t.vasconcellos@gmail.com">plinio.vasconcellos@gmail.com</a>
                 <a href="mailto:viniciusdemirandabarbosa@gmail.com">viniciusmiranda@gmail.com</a>
             </div>
-        
+        </div>
 
         <h2 class="duvida">Qual é a sua dúvida?</h2>
         <section id="container-formulario">
