Responsividade - contribuição até 1450

--- a/contribuicao.html
+++ b/contribuicao.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>SHC</title>
+    <title>SHC - Contribuição</title>
 
 <body>
 
@@ -88,7 +88,7 @@
                 incentivar seus funcionários a fazerem doações individuais.</p>
         </section>
         <!-- Atenção -->
-        <figure><img src="imagens/img-contribuicao.png" alt="Marmitas com comida"></figure>
+        <figure class="img-contribuicao"><img src="imagens/img-contribuicao.png" alt="Marmitas com comida"></figure>
 
         <section id="contribuicao">
             <h2>Contribuição</h2>
@@ -97,17 +97,17 @@
             <div id="container-selecao">
 
                     <label for="trinta-reais">
-                        <input type="radio" name="trinta-reais" value="trinta-reais" id="trinta-reais">
+                        <input type="radio" name="dinheiro" value="trinta-reais" id="trinta-reais">
                         R$ 30,00
                     </label>
 
                     <label for="60">
-                        <input type="radio" name="60-reais" id="60-reais">
+                        <input type="radio" name="dinheiro" id="60-reais">
                         R$ 60,00
                     </label>
 
                     <label for="90">
-                        <input type="radio" name="90-reais" id="90-reais">
+                        <input type="radio" name="dinheiro" id="90-reais">
                         R$ 90,00
                     </label>
 
