Responsividade - página contribuição

--- a/contribuicao.html
+++ b/contribuicao.html
@@ -157,24 +157,24 @@
             <div id="container-formas">
                 <div class="pagamento">
                     <label for="pix">
-                        <input type="radio" name="pix" value="pix" id="pix">
+                        <input type="radio" name="pagamento" value="pix" id="pix">
                         PIX
                     </label>
                 </div>
                 <div class="pagamento">
                     <label for="cartao-credito">
-                        <input type="radio" name="cartao-credito" id="cartao-credito"> Cartão de crédito
+                        <input type="radio" name="pagamento" id="cartao-credito"> Cartão de crédito
                     </label>
                 </div>
                 <div class="pagamento">
                     <label for="cartao-debito">
-                        <input type="radio" name="cartao-debito" id="cartao-debito"> Cartão de débito
+                        <input type="radio" name="pagamento" id="cartao-debito"> Cartão de débito
                     </label>
                 </div>
 
                 <div class="pagamento">
                     <label for="transferencia">
-                        <input type="radio" name="transferencia" id="transferencia"> Transferência bancária
+                        <input type="radio" name="pagamento" id="transferencia"> Transferência bancária
                     </label>
                 </div>
 
