Responsividade/fale conosco - início
Configurações iniciais na página fale conosco.

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -54,27 +54,26 @@
         </div>
 
         <h2 class="duvida">Qual é a sua dúvida?</h2>
-        <section id="container-formulario">
-            <form action="" method="post">
-                <div class="caixas">
-                    <label for="nome">Nome:</label>
-                    <input type="text" name="nome" id="nome" required class="inputs" placeholder="Digite seu nome completo">
-                </div>
-
-                <div class="caixas">
-                    <label for="email">E-mail:</label>
-                    <input type="email" name="email" id="email" required class="inputs" placeholder="Digite seu e-mail">
-                </div>
-
-                <div class="caixas">
-                    <label for="telefone">Telefone fixo:</label>
-                    <input type="tel" name="telefone" id="telefone" class="inputs" placeholder="Digite seu telefone">
-                </div>
-
-                <div class="caixas">
-                    <label for="mensagem">Mensagem:</label><br>
-                    <textarea placeholder="Digite aqui sua dúvida..."  name="" id="" cols="45" rows="8"></textarea>
-                </div>
+        
+            <section id="container-formulario2">
+                <form action="" method="post">
+                    <div class="caixas">
+                        <label for="nome">Nome:</label>
+                        <input type="text" name="nome" id="nome" required class="inputs" placeholder="Digite seu nome completo">
+                    </div>
+                    <div class="caixas">
+                        <label for="email">E-mail:</label>
+                        <input type="email" name="email" id="email" required class="inputs" placeholder="Digite seu e-mail">
+                    </div>
+                    <div class="caixas">
+                        <label for="telefone">Telefone fixo:</label>
+                        <input type="tel" name="telefone" id="telefone" class="inputs" placeholder="Digite seu telefone">
+                    </div>
+                    <div class="caixas">
+                        <label for="mensagem">Mensagem:</label><br>
+                        <textarea placeholder="Digite aqui sua dúvida..."  name="" id="" cols="45" rows="8"></textarea>
+                    </div>
+            </section>
 
     </main>
 
