Mudança na estilização dos formulários
Com essa mudança, a responsividade terá que sofrer ajustes, e outro problema na própria estilização deve ser arrumado.

--- a/contribuicao.html
+++ b/contribuicao.html
@@ -125,26 +125,25 @@
 
         <section id="container-formulario">
             <form action="" method="post">
-                <div class="caixas">
-                    <label for="nome">Nome:</label>
-                    <input type="text" name="nome" id="nome" required class="inputs" placeholder="Digite seu nome completo">
+                <div class="input-group" class="caixas">
+                    <input type="text" name="nome" class="inputs" required/>
+                    <label name="nome">Nome Completo:</label>
                 </div>
 
-                <div class="caixas">
-                    <label for="email">E-mail:</label>
-                    <input type="email" name="email" id="email" required class="inputs" placeholder="Digite seu e-mail">
+                <div class="input-group" class="caixas">
+                    <input type="email" name="email" class="inputs" required/>
+                    <label name="email">Seu E-mail</label>
                 </div>
 
-                <div class="caixas">
-                    <label for="telefone">Telefone fixo:</label>
-                    <input type="tel" name="telefone" id="telefone" class="inputs" placeholder="Digite seu telefone">
+                <div class="input-group" class="caixas">
+                    <input type="tel" name="telefone" class="inputs"/>
+                    <label name="telefone">Telefone fixo</label>
                 </div>
 
-                <div class="caixas">
-                    <label for="celular">Celular:</label>
-                    <input type="tel" name="celular" id="celular" required class="inputs" placeholder="Digite seu celular">
+                <div class="input-group" class="caixas">
+                    <input type="tel" name="celular" class="inputs" required/>
+                    <label name="celular">Celular</label>
                 </div>
-
             </form>
         </section>
 
