--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/fundo_logo.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Self Help Community</title>
 
 </head>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 <body>
 
@@ -32,28 +35,83 @@
 
     <main id="container-home">
 
-        <section class="destaque">
-            <h1>Self Help Community</h1>
-            <p>Arrecadação de doações para instituições gastronômicas para a distribuição de marmitas.</p>
-        </section><br>
+        <section id="container-carrossel">
+            <div id="carouselExampleAutoplaying" class="carousel slide container my-5" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="imagens/bife-de-carne.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="imagens/chef-de-cozinha.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="imagens/imagembatatas.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
 
         <section class="conteudo">
             <h2>O Projeto</h2><br>
-            <p>Self Help Cummunity é um espaço que oferece refeições gratuitas para pessoas que enfrentam dificuldades
-                financeiras, sem-teto ou em situação de vulnerabilidade social. Esses projetos de solidariedade são
-                importantes para garantir que todos tenham acesso a alimentos saudáveis e nutritivos, independentemente da
-                sua situação financeira.</p>
-            <p>A ideia de uma cozinha solidária em uma comunidade pode ser um processo desafiador, mas recompensador. É
-                importante estabelecer parcerias com organizações locais, como igrejas, escolas, instituições de caridade e
-                governos locais para garantir o apoio necessário.</p>
-            <p>Também é importante considerar a estrutura física da cozinha, incluindo equipamentos de cozinha, espaço de
-                armazenamento de alimentos e espaço para servir as refeições. A contratação de funcionários e voluntários
-                para ajudar com a preparação de alimentos, limpeza e serviços de atendimento também é essencial.</p>
-            <p>Além disso, a divulgação da cozinha solidária para a comunidade é fundamental para garantir que aqueles que
-                precisam tenham conhecimento da disponibilidade de alimentos e serviços.</p>
-            A criação de uma cozinha solidária é uma forma de ajudar a construir uma comunidade mais unida, garantindo que
-            ninguém seja deixado para trás quando se trata de ter acesso a alimentos saudáveis e nutritivos, sabendo que
-            mais de 33 milhões de pessoas passam fome no Brasil.</p>
+            <div id="alinhamento-paragrafo-home">
+                <p>Self Help Cummunity é um espaço que oferece refeições gratuitas para pessoas que enfrentam dificuldades
+                    financeiras, sem-teto ou em situação de vulnerabilidade social. Esses projetos de solidariedade são
+                    importantes para garantir que todos tenham acesso a alimentos saudáveis e nutritivos, independentemente da
+                    sua situação financeira.</p>
+                <p>A ideia de uma cozinha solidária em uma comunidade pode ser um processo desafiador, mas recompensador. É
+                    importante estabelecer parcerias com organizações locais, como igrejas, escolas, instituições de caridade e
+                    governos locais para garantir o apoio necessário.</p>
+                <p>Também é importante considerar a estrutura física da cozinha, incluindo equipamentos de cozinha, espaço de
+                    armazenamento de alimentos e espaço para servir as refeições. A contratação de funcionários e voluntários
+                    para ajudar com a preparação de alimentos, limpeza e serviços de atendimento também é essencial.</p>
+                <p>Além disso, a divulgação da cozinha solidária para a comunidade é fundamental para garantir que aqueles que
+                    precisam tenham conhecimento da disponibilidade de alimentos e serviços.</p>
+                A criação de uma cozinha solidária é uma forma de ajudar a construir uma comunidade mais unida, garantindo que
+                ninguém seja deixado para trás quando se trata de ter acesso a alimentos saudáveis e nutritivos, sabendo que
+                mais de 33 milhões de pessoas passam fome no Brasil.</p>
+            </div>
+        </section>
+
+        <section id="container-contexto">
+            <article class="contexto">
+                <img src="imagens/icone-inseguranca-alimentar.png" alt="ícone insegurança alimentar">
+                <div class="alinhamento">
+                    <h6>Insegurança alimentar no Brasil</h6>
+                    <p>Pouco mais da metade da população brasileira, mais precisamente 58,7% ou 125,2 milhões de pessoas, convivem com a insegurança alimentar.</p>
+                </div>
+            </article>
+
+            <article class="contexto">
+                <img src="imagens/icone-linha-de-pobreza.png" alt="ícone insegurança alimentar">
+                <div class="alinhamento">
+                    <h6>Pessoas em situação de extrema pobreza</h6>
+                    <p>27,6 milhões de pessoas no Brasil vivem em uma situação de extrema pobreza.</p>
+                </div>
+            </article>
+
+            <article class="contexto">
+                <img src="imagens/icone-coronavirus.png" alt="ícone insegurança alimentar">
+                <div class="alinhamento">
+                    <h6>Fome na pandemia</h6>
+                    <p>No contexto da pandemia de Covid-19 no Brasil 33,1 milhões de pessoas não têm garantido o que comer o que representa 14 milhões de brasileiros em situação de fome.</p>
+                </div>
+            </article>
+
+            <article class="contexto">
+                <img src="imagens/icone-feminino.png" alt="ícone insegurança alimentar">
+                <div class="alinhamento">
+                    <h6>A fome tem gênero</h6>
+                    <p>Hoje, 6 em cada 10 domicílios liderados por mulheres estão em algum grau de insegurança alimentar.</p>
+                </div>
+            </article>
         </section>
 
     </main>
