--- a/contribuicao.html
+++ b/contribuicao.html
@@ -28,14 +28,14 @@
 
 
     <main id="container-contribuicao">
-        <section id="espaco-texto">
+        <section class="espaco-texto">
             <h2>Como contribuir?</h2>
             <p>Nossa cozinha solidária é o resultado do trabalho voluntário e das doações de diversas pessoas que
                 acreditam
                 na ação coletiva para um mundo melhor! Colabore com esse projeto também.</p>
         </section>
 
-        <section id="espaco-texto">
+        <section class="espaco-texto">
             <h2>Por que contribuir?</h2>
             <p>A falta de políticas públicas voltadas à Segurança Alimentar e Nutricional fez com que os movimentos
                 sociais
@@ -52,7 +52,7 @@
                 garantido a todas e a todos a nossa Cozinha também é um espaço de acolhimento.</p>
         </section>
 
-        <section id="espaco-texto">
+        <section class="espaco-texto">
             <h2>Contribuição Mensal</h2>
             <p>Uma contribuição mensal para umavs cozinha solidária é uma forma significativa de ajudar a alimentar
                 pessoas
@@ -65,7 +65,7 @@
                 cozinha solidária para obter sua alimentação básica diária.</p>
         </section>
 
-        <section id="espaco-texto">
+        <section class="espaco-texto">
             <h2>Contribuição Única</h2>
             <p>Uma contribuição única para uma cozinha solidária é uma doação financeira feita em uma única vez para
                 apoiar
@@ -76,7 +76,7 @@
                 da comunidade.</p>
         </section>
 
-        <section id="espaco-texto">
+        <section class="espaco-texto">
             <h2>Contribuição de Empresas</h2>
             <p>As empresas podem contribuir para uma cozinha solidária de várias maneiras, tanto financeiramente quanto
                 através de outras formas de apoio.</p>
