--- a/oq-fazemos.html
+++ b/oq-fazemos.html
@@ -32,7 +32,7 @@
 
     <main id="main-oq-fazemos">
         <img src="imagens/fundo-prato-vazio.png" alt="">
-        <section class="oq-fazemos-texto limitador">
+        <section class="espaco-texto">
             <p>O objetivo principal da Self Help Community é fornecer refeições gratuitas para pessoas em situação de
                 vulnerabilidade social, como pessoas sem-teto, desempregadas ou com baixa renda. Essa iniciativa tem como
                 objetivo garantir que todas as pessoas tenham acesso a alimentos saudáveis e nutritivos.</p>
