--- a/oq-fazemos.html
+++ b/oq-fazemos.html
@@ -33,17 +33,17 @@
     <main id="main-oq-fazemos">
         <img src="imagens/fundo-prato-vazio.png" alt="">
         <section class="espaco-texto">
-            <p>O objetivo principal da Self Help Community é fornecer refeições gratuitas para pessoas em situação de
+            <p class="cor">O objetivo principal da Self Help Community é fornecer refeições gratuitas para pessoas em situação de
                 vulnerabilidade social, como pessoas sem-teto, desempregadas ou com baixa renda. Essa iniciativa tem como
                 objetivo garantir que todas as pessoas tenham acesso a alimentos saudáveis e nutritivos.</p>
-            <p>ém disso, a Self Help Community pode ajudar a construir uma comunidade mais unida, onde as pessoas se ajudam
+            <p class="cor">ém disso, a Self Help Community pode ajudar a construir uma comunidade mais unida, onde as pessoas se ajudam
                 mutuamente e trabalham juntas para enfrentar os desafios sociais. Esses espaços podem ser uma fonte de apoio
                 emocional e prático para aqueles que enfrentam dificuldades financeiras e sociais. </p>
-            <p>Outro objetivo da Self Help Community é reduzir o desperdício de alimentos. Muitas vezes, os alimentos que
+            <p class="cor">Outro objetivo da Self Help Community é reduzir o desperdício de alimentos. Muitas vezes, os alimentos que
                 são doados para essas cozinhas são produtos que de outra forma seriam jogados fora, mas que ainda estão em
                 boas condições para consumo. Ao aproveitar esses alimentos, as cozinhas solidárias podem ajudar a reduzir o
                 desperdício e o impacto ambiental negativo. </p>
-            <p>A Self Help Community está com objetivo de fornecer alimentos nutritivos e acessíveis para aqueles que
+            <p class="cor">A Self Help Community está com objetivo de fornecer alimentos nutritivos e acessíveis para aqueles que
                 precisam, enquanto constrói uma comunidade mais forte e reduz o desperdício de alimentos.
             </p>
         </section>
