--- a/index.html
+++ b/index.html
@@ -64,45 +64,29 @@
             </div>
         </section>
 
-        <section id="carrossel-home">
-            <div id="carouselExampleCaptions" class="carousel slide">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <section id="container-inseguranca">
+            <h3 id="titulo-inseguranca">A insegurança alimentar é um fenômeno que ocorre quando um indivíduo não possui acesso físico, econômico e social a alimentos de forma a satisfazer as suas necessidades. Ela é classificada em três níveis:</h3>
+
+            <div class="alinhamento-inseguranca">
+                <div class="titulo-e-paragrafo">
+                    <h4 id="leve">Leve</h4>
+                    <p>Quando há receio de passar fome em um futuro próximo.</p>
                 </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="imagens/homem-deitado-sem-camisa.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <!-- <h5>First slide label</h5>
-                      <p>Some representative placeholder content for the first slide.</p> -->
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="imagens/criancas-magras.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <!-- <h5>Second slide label</h5>
-                      <p>Some representative placeholder content for the second slide.</p> -->
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="imagens/crianca-comendo-no-lixao.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <!-- <h5>Third slide label</h5>
-                      <p>Some representative placeholder content for the third slide.</p> -->
-                    </div>
-                  </div>
+            </div>
+
+            <div class="alinhamento-inseguranca">
+                <div class="titulo-e-paragrafo">
+                    <h4 id="moderada">Moderada</h4>
+                    <p>Quando há restrição na quantidade de comida para a família.</p>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Prévia</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Avançar</span>
-                </button>
-              </div>
+            </div>
+
+            <div class="alinhamento-inseguranca">
+                <div class="titulo-e-paragrafo">
+                    <h4 id="grave">Grave</h4>
+                    <p>Nos casos de falta de alimento na mesa.</p>
+                </div>
+            </div>
         </section>
 
         <section id="container-contexto">
@@ -111,7 +95,7 @@
                     <img src="imagens/icone-inseguranca-alimentar.png" alt="ícone insegurança alimentar">
                     <div class="alinhamento">
                         <h6>Insegurança alimentar no Brasil</h6>
-                        <p>Pouco mais da metade da população brasileira, mais precisamente 58,7% ou 125,2 milhões de pessoas, convivem com a insegurança alimentar.</p>
+                        <p>Dados do IBGE revelam que 41% da população brasileira convive com a insegurança alimentar.</p>
                     </div>
                 </article>
                 <article class="contexto">
