--- a/index.html
+++ b/index.html
@@ -66,25 +66,24 @@
 
         <section id="container-inseguranca">
             <h3 id="titulo-inseguranca">A insegurança alimentar é um fenômeno que ocorre quando um indivíduo não possui acesso físico, econômico e social a alimentos de forma a satisfazer as suas necessidades. Ela é classificada em três níveis:</h3>
-
-            <div class="alinhamento-inseguranca">
-                <div class="titulo-e-paragrafo">
-                    <h4 id="leve">Leve</h4>
-                    <p>Quando há receio de passar fome em um futuro próximo.</p>
+            <div id="flex-cartoes">
+                <div class="alinhamento-inseguranca">
+                    <div class="titulo-e-paragrafo">
+                        <h4 id="leve">Leve</h4>
+                        <p>Quando há receio de passar fome em um futuro próximo.</p>
+                    </div>
                 </div>
-            </div>
-
-            <div class="alinhamento-inseguranca">
-                <div class="titulo-e-paragrafo">
-                    <h4 id="moderada">Moderada</h4>
-                    <p>Quando há restrição na quantidade de comida para a família.</p>
+                <div class="alinhamento-inseguranca">
+                    <div class="titulo-e-paragrafo">
+                        <h4 id="moderada">Moderada</h4>
+                        <p>Quando há restrição na quantidade de comida para a família.</p>
+                    </div>
                 </div>
-            </div>
-
-            <div class="alinhamento-inseguranca">
-                <div class="titulo-e-paragrafo">
-                    <h4 id="grave">Grave</h4>
-                    <p>Nos casos de falta de alimento na mesa.</p>
+                <div class="alinhamento-inseguranca">
+                    <div class="titulo-e-paragrafo">
+                        <h4 id="grave">Grave</h4>
+                        <p>Nos casos de falta de alimento na mesa.</p>
+                    </div>
                 </div>
             </div>
         </section>
